finish unique TID generation

--- a/builtin/components/got/TemplateStatus.html
+++ b/builtin/components/got/TemplateStatus.html
@@ -14,7 +14,8 @@
       <tr>
         <td rowspan="2">
           <!-- TODO: "()" in context should be automatically added in transfer.go -->
-          <t:a t:id="DetailLink" event="TemplateDetail" context="(.Key | encode)" label=".Key"
+          <!-- id is not used here -->
+          <t:a tid="DetailLink" event="TemplateDetail" context="(.Key | encode)" label=".Key"
                target="_blank"/>
           <!-- TODO How to deal with component content-->
         </td>
