--- a/builtin/components/ProvinceSelect.html
+++ b/builtin/components/ProvinceSelect.html
@@ -1,3 +1,2 @@
-
-{{t_select $ "data" .Data "name" .Name "value" .Value "Header" .Header}}
+<t:select data=".Data" name=".Name" value=".Value" Header=".Header" />
 
