some sqlhelper commit

--- a/builtin/components/A.html
+++ b/builtin/components/A.html
@@ -1,1 +1,2 @@
-<a href="{{.Href}}">{{.Label}}</a>
+<a href="{{.Href}}" {{if .Onclick}} onclick={{.OnclickHtml}} {{end}}>{{.Label}}</a>
+<!-- TODO pass through other attributes.-->
