--- a/builtin/components/layout/GOTHeader.html
+++ b/builtin/components/layout/GOTHeader.html
@@ -3,4 +3,61 @@
   <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" />
 </t:import>
 
-<title>Go on Tapestry(GOT) WebFramework</title>
+<!-- Bootstrap 3 startup tempaltes -->
+
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>{{.Title}}</title>
+
+<!-- Bootstrap -->
+<link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<!-- /Bootstrap -->
+
+<!-- Customized Css -->
+<!-- <link href="/static/skins/skin_001/skin.css" rel="stylesheet" type="text/css" /> -->
+
+
+<!-- JS: 3rd library, TODO: should be place them in bottom of the page.-->
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/angular.min.js"></script>
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="/static/js/got.js"></script>
+<script type="text/javascript" src="/static/js/core/core-multiline-table.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <link href="/static/bootstrap/css/bootstrap-modal.min.css" rel="stylesheet" type="text/css" /> -->
+<!-- <link href="/static/bootstrap/css/bootstrap-selected.css" rel="stylesheet" type="text/css" /> -->
+
+
+<!-- <script type="text/javascript" src="/static/bootstrap/js/bootstrap-modal.min.js"></script> -->
+
+<!-- core js library-->
+
+
+<t:block id="hidden-block">
+  <!-- basic css -->
+  <!-- <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+  <!-- <link href="/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"> -->
+</t:block>
+
