support components' single key informal parameter.

--- a/builtin/components/Select.html
+++ b/builtin/components/Select.html
@@ -1,4 +1,4 @@
-<select name="{{.Name}}">
+<select name="{{.Name}}" {{.InformalParameterString | attr}}>
   <if t=".AllowEmpty">
     <option>{{.Header}}</option>
   </if>
