--- a/builtin/components/ui/Pager.html
+++ b/builtin/components/ui/Pager.html
@@ -1,32 +1,41 @@
 <!-- test component -->
 
-<div {{/* style="border:solid 0px gray;margin:8px;padding:8px;" */}} class="pager_main">
+<!-- <div class="pager_main"> -->
+<!--   <a href="#">First Page</a> -->
+<!--   <span> -->
+<!--     <a href="#">1</a> -->
+<!--     <a href="#">2</a> -->
+<!--     <a class="cur" href="#">3</a> -->
+<!--     <a href="#">4</a> -->
+<!--     <a href="#">5</a> -->
+<!--   </span> -->
+<!--   <a href="#">Last Page</a> -->
+<!-- </div> -->
 
-  {{/*<!--
-          <div style="color:#333;display:none" >
-            <strong>DEVELOPMENT MESSAGE:</strong><br>
-            CurrentItem: {{.Current}},<br>
-            Total: {{.Total}},<br>
-            PageItems: {{.PageItems}}<br>
-          </div>
-          --> */}}
-
-  <div style="margin:4px;">
-    {{.PageCursorMessage}}
-  </div>
-  
-  <div>
-    <a class="btn_c_s" href="{{$.CreateFirstPagerLink}}">{{.Msg "firstpage"}}</a>
-    <span>
-      <range source=".PageNumbers">
-        <if test="$.IsCurrentPage .">
-          <a href="{{$.CreatePagerLink .}}" class="cur">{{.PageNumber}}</a>
-          <else>
-            <a href="{{$.CreatePagerLink .}}">{{.PageNumber}}</a>
-          </else>
-        </if>
-      </range>
-    </span>
-    <a class="btn_c_s" href="{{$.CreateLastPagerLink}}">{{.Msg "lastpage"}}</a>
-  </div>
+<div class="pager_main">
+  <a href="{{$.CreateFirstPagerLink}}">{{.Msg "firstpage"}}</a>
+  <span>
+    <range source=".PageNumbers">
+      <if test="$.IsCurrentPage .">
+        <a href="{{$.CreatePagerLink .}}" class="cur">{{.PageNumber}}</a>
+        <else>
+          <a href="{{$.CreatePagerLink .}}">{{.PageNumber}}</a>
+        </else>
+      </if>
+    </range>
+  </span>
+  <a href="{{$.CreateLastPagerLink}}">{{.Msg "lastpage"}}</a>
 </div>
+
+{{/*<!--
+        <div style="color:#333;display:none" >
+          <strong>DEVELOPMENT MESSAGE:</strong><br>
+          CurrentItem: {{.Current}},<br>
+          Total: {{.Total}},<br>
+          PageItems: {{.PageItems}}<br>
+        </div>
+        --> */}}
+
+<!-- <div style="margin:4px;"> -->
+<!--   {{.PageCursorMessage}} -->
+<!-- </div> -->
