--- a/builtin/components/Select.html
+++ b/builtin/components/Select.html
@@ -1,6 +1,6 @@
 <select name="{{.Name}}" {{.InformalParameterString | attr}}>
   <if t=".AllowEmpty">
-    <option>{{.Header}}</option>
+    <option value="">{{.Header}}</option>
   </if>
   {{range $_,$option :=.OptionData}}
   <option value="{{index $option 0}}" {{if index $option 0 | $.IsSelected }} selected="selected" {{end}}>
