Block and Delegate Component

--- a/builtin/components/got/TemplateStatus.html
+++ b/builtin/components/got/TemplateStatus.html
@@ -31,7 +31,7 @@
         {{range .Seg.Blocks}}
         <tr>
           <td style="width:20px;"></td>
-          <td>{{.ID}}</td>
+          <td>{{.ID}} > {{.ContentTransfered}}</td>
         </tr>
         {{end}}
       </if>
@@ -39,7 +39,6 @@
       {{end}}
     </tbody>
   </table>
-  
 
   <script type="text/javascript">
 
@@ -50,4 +49,3 @@
   
 
 </div>
-
